[gd_scene load_steps=3 format=3 uid="uid://bfovdi5eowpoe"]

[ext_resource type="Script" path="res://items/collectible_item.gd" id="1_4k6ar"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f40h2"]
radius = 12.0

[node name="CollectibleItem" type="Area2D" groups=["Collectible"]]
collision_layer = 256
collision_mask = 256
script = ExtResource("1_4k6ar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f40h2")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.302114, 0.430404, 0.787783, 1)
polygon = PackedVector2Array(-8, 6, -8, -6, 0, -12, 8, -6, 8, 6, 0, 12)

[node name="Collected" type="AudioStreamPlayer2D" parent="."]

[node name="Glint" type="AudioStreamPlayer2D" parent="."]

[node name="GlintSFX" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="collected" from="." to="." method="_on_collected"]
[connection signal="finished" from="Collected" to="." method="_on_sfx_collected_finished"]
[connection signal="timeout" from="GlintSFX" to="." method="_on_glint_sfx_timeout"]
